Fixed bottom margin on mobile [#173468318]

--- a/src/styles/react-toastify/_toastContainer.scss
+++ b/src/styles/react-toastify/_toastContainer.scss
@@ -39,7 +39,6 @@
     width: 100vw;
     padding: 0;
     left: 0;
-    margin: 0;
     &--top-left,
     &--top-center,
     &--top-right {
